UAT_AllStar_8Jan2024_0636/Backup-Source/objects/GCP_SFDC_100pct_Analysis_SKU__c.object
<CustomObject>
    <fields>
        <fullName>GCP_Cust_Act_Volume_Mat_Eu__c</fullName>
        <label>GCP Cust Act Volume Mat Eu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_COGS_Per_Unit__c</fullName>
        <label>GCP COGS Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_CVS_CustAct_Sales__c</fullName>
        <label>CVS CustAct Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_CVS_CustAct_Volume__c</fullName>
        <label>CVS CustAct Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_CVS_Share_Vol__c</fullName>
        <label>CVS Share Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_CVS_VolShare_Percent__c</fullName>
        <label>CVS VolShare Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Cardinal_CustAct_Sales__c</fullName>
        <label>Cardinal CustAct Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Cardinal_CustAct_Volume__c</fullName>
        <label>Cardinal CustAct Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Cardinal_Share_Vol__c</fullName>
        <label>Cardinal Share Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Cardinal_VolShare_Percent__c</fullName>
        <label>Cardinal VolShare Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_Type__c</fullName>
        <label>Vision Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Cooling_Period_Date__c</fullName>
        <label>Cooling Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Cooling_Period_String__c</fullName>
        <label>Cooling Period String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Cooling_Period__c</fullName>
        <label>Cooling Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Position__c</fullName>
        <label>Current Position</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Cust_Act_Sales_Mat__c</fullName>
        <label>GCP Cust Act Sales Mat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Code__c</fullName>
        <label>GCP Customer Code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Name__c</fullName>
        <label>GCP Customer Name</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_SFID__c</fullName>
        <label>GCP Customer SFID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP SFDC 100pct Analysis SKU</relationshipLabel>
        <relationshipName>GCP_SFDC_100pct_Analysis_SKU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_DRL_Act_Tpt__c</fullName>
        <label>GCP DRL Act Tpt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_DRL_Act_Volume_Eu__c</fullName>
        <label>GCP DRL ACT Volume Eu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Drl_Act_Price__c</fullName>
        <label>GCP Drl Act Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Drl_Act_Sales__c</fullName>
        <label>GCP Drl Act Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Drl_Act_Tpt_Pct__c</fullName>
        <label>GCP Drl Act Tpt Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Estimate_Account_Total_Vol_EU__c</fullName>
        <label>Estimate Account Total Vol (EU)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Estimate_Vol_Method__c</fullName>
        <label>Vision Estimate Vol Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Line Volume</fullName>
                    <default>true</default>
                    <label>Full Line Volume</label>
                </value>
                <value>
                    <fullName>User Input</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Is_Internal_Batch_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used in handleLookupsFuncBatchCls. Using this field we are escaping already processed records from batch process</description>
        <label>Is Internal Batch Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Major_CustAct_Sales__c</fullName>
        <label>Major CustAct Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Major_CustAct_Volume__c</fullName>
        <label>Major CustAct Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Major_Share_Vol__c</fullName>
        <label>Major Share Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Major_VolShare_Percent__c</fullName>
        <label>Major VolShare Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_McKesson_Vol_Share__c</fullName>
        <label>McKesson Vol Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_McKesson_Vol__c</fullName>
        <label>McKesson Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_NorthStar_CustAct_Sales__c</fullName>
        <label>NorthStar CustAct Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_NorthStar_CustAct_Vol__c</fullName>
        <label>NorthStar CustAct Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_NorthStar_Vol_Share__c</fullName>
        <label>NorthStar Vol Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_NorthStar_Vol__c</fullName>
        <label>NorthStar Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_OTC_Product_Position__c</fullName>
        <label>OTC Product Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Primary_Reason__c</fullName>
        <label>rimary Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Probability__c</fullName>
        <label>Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Product_Constraint__c</fullName>
        <label>Product Constraint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price Constraint</fullName>
                </value>
                <value>
                    <fullName>Supply Constraint</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Not An Opportunity</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>True Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Product_Status__c</fullName>
        <label>Product Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP SFDC 100pct Analysis SKU</relationshipLabel>
        <relationshipName>GCP_SFDC_100pct_Analysis_SKU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Proof_Month_Range__c</fullName>
        <label>GCP Proof Month Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Rite_Aid_Vol_Share__c</fullName>
        <label>Rite Aid Vol Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Rite_Aid_Vol__c</fullName>
        <label>Rite Aid Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Code__c</fullName>
        <label>GCP SKU Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_SRx_Opportunity_Dollar__c</fullName>
        <label>SRx Opportunity Dollar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_SRx_Opty_Share_per__c</fullName>
        <label>SRx Opty Share per</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Secondary_Reason__c</fullName>
        <label>secondary Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>GCP Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Suggested_Price__c</fullName>
        <label>GCP Suggested Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <description>Record id from gcp we are considering as Unique Identifier</description>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Update_date__c</fullName>
        <label>GCP Update date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_User_Input_Estimate_Vol__c</fullName>
        <label>User Input Estimate Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_WalMart_Vol_Share__c</fullName>
        <label>WalMart Vol Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_WalMart_Vol__c</fullName>
        <label>WalMart Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_doesPositionExists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>doesPositionExists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_isAlerted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAlerted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_isIncludeProduct__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Vision isIncludeProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_is_inBid_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is inBid item</label>
        <type>Checkbox</type>
    </fields>
    <label>GCP SFDC 100pct Analysis SKU</label>
    <nameField>
        <displayFormat>100PCT-Analysis-SKU-{00000}</displayFormat>
        <label>GCP SFDC 100pct Analysis SKU Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP SFDC 100pct Analysis SKU</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>